Updated data factory to read from CSV files Implemented very basic combat resolution